dev java servlet receive message

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.2.2.jar=../../Code/jar/gson-2.2.2.jar/gson-2.2.2.jar
+file.reference.httpclient-osgi-4.3.jar=D:\\BANK\\Program\\java\\httpclient-osgi-4.3.jar\\httpclient-osgi-4.3.jar
+file.reference.jackson-all-1.9.9.jar=D:\\BANK\\Program\\java\\jackson-all-1.9.9.jar\\jackson-all-1.9.9.jar
 file.reference.json-simple-1.1.1.jar=../../Code/jar/json-simple-1.1.1.jar/json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +42,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.gson-2.2.2.jar}
+    ${file.reference.gson-2.2.2.jar}:\
+    ${file.reference.httpclient-osgi-4.3.jar}:\
+    ${file.reference.jackson-all-1.9.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
