--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.2.2.jar=../../Code/jar/gson-2.2.2.jar/gson-2.2.2.jar
+file.reference.gson-2.2.2.jar-1=D:\\BANK\\Program\\Java .jar\\gson-2.2.2.jar\\gson-2.2.2.jar
 file.reference.httpclient-osgi-4.3.jar=D:\\BANK\\Program\\java\\httpclient-osgi-4.3.jar\\httpclient-osgi-4.3.jar
 file.reference.httpclient-osgi-4.3.jar-1=D:\\BANK\\Program\\Java .jar\\httpclient-osgi-4.3.jar\\httpclient-osgi-4.3.jar
 file.reference.jackson-all-1.9.9.jar=D:\\BANK\\Program\\java\\jackson-all-1.9.9.jar\\jackson-all-1.9.9.jar
 file.reference.jackson-all-1.9.9.jar-1=D:\\BANK\\Program\\Java .jar\\jackson-all-1.9.9.jar\\jackson-all-1.9.9.jar
 file.reference.json-simple-1.1.1.jar=../../Code/jar/json-simple-1.1.1.jar/json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar-1=D:\\BANK\\Program\\Java .jar\\json-simple-1.1.1.jar\\json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.httpclient-osgi-4.3.jar}:\
     ${file.reference.jackson-all-1.9.9.jar}:\
     ${file.reference.jackson-all-1.9.9.jar-1}:\
-    ${file.reference.httpclient-osgi-4.3.jar-1}
+    ${file.reference.httpclient-osgi-4.3.jar-1}:\
+    ${file.reference.json-simple-1.1.1.jar-1}:\
+    ${file.reference.gson-2.2.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
