--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
     <groupId>com.example</groupId>
     <version>1.0-SNAPSHOT</version>
     <artifactId>helloworld</artifactId>
-    <dependencies>
-    </dependencies>
+<!--    <dependencies>
+        
+    </dependencies>-->
     <build>
         <plugins>
             <plugin>
@@ -15,11 +16,25 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.4</version>
                 <executions>
-                    <execution>
+<!--                    <execution>
                         <id>copy-dependencies</id>
                         <phase>package</phase>
                         <goals><goal>copy-dependencies</goal></goals>
-                    </execution>
+                    </execution>-->
+                    <execution>
+                    <phase>package</phase>
+                    <goals><goal>copy</goal></goals>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>com.github.jsimone</groupId>
+                                <artifactId>webapp-runner</artifactId>
+                                <version>8.0.30.2</version>
+                                <destFileName>webapp-runner.jar</destFileName>
+                            </artifactItem>
+                        </artifactItems>
+                    </configuration>
+                </execution>
                 </executions>
             </plugin>
         </plugins>
