--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 </dependency>
 </dependencies>
 <build>
-<finalName>exampleWeb</finalName>
+<finalName>sheralinemsgdemo</finalName>
 <plugins>
 <plugin>
             <groupId>org.apache.maven.plugins</groupId>
