--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 </dependency>
 </dependencies>
 <build>
-<finalName>sheralinemsgdemo</finalName>
+<finalName>sheralinemsgdem</finalName>
 <plugins>
 <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
+			<configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </configuration>
             <version>2.3</version>
             <executions>
                 <execution>
