--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<configuration>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </configuration>
-            <version>2.3</version>
+	  <configuration>
+    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>        
+  </configuration>
+            <version>3.2</version>
             <executions>
                 <execution>
                     <phase>package</phase>
