--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,8 @@
 deploy.ant.properties.file=D:\\Users\\jirasak_ka\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+file.reference.gson-2.2.2.jar=D:\\BANK\\Program\\Java .jar\\gson-2.2.2.jar\\gson-2.2.2.jar
+file.reference.httpclient-osgi-4.3.jar=D:\\BANK\\Program\\Java .jar\\httpclient-osgi-4.3.jar\\httpclient-osgi-4.3.jar
+file.reference.jackson-all-1.9.9.jar=D:\\BANK\\Program\\Java .jar\\jackson-all-1.9.9.jar\\jackson-all-1.9.9.jar
+file.reference.json-simple-1.1.1.jar=D:\\BANK\\Program\\Java .jar\\json-simple-1.1.1.jar\\json-simple-1.1.1.jar
 j2ee.server.domain=D:/Users/jirasak_ka/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
