--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,25 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
-
-<groupId>com.mycompany.app</groupId>
-<artifactId>my-app</artifactId>
-<version>1.0-SNAPSHOT</version>
-<packaging>war</packaging>
-
-<name>Maven Quick Start Archetype</name>
-<url>http://maven.apache.org</url>
-
-<dependencies>
-<dependency>
-<groupId>junit</groupId>
-<artifactId>junit</artifactId>
-<version>4.8.2</version>
-<scope>test</scope>
-</dependency>
-</dependencies>
-<build>
-<finalName>sheralinemsgdemo</finalName>
-<plugins>
-<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.0.1</version>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals><goal>copy</goal></goals>
-                    <configuration>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.example</groupId>
+    <version>1.0-SNAPSHOT</version>
+    <artifactId>helloworld</artifactId>
+    <dependencies>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals><goal>copy-dependencies</goal></goals>
+						<configuration>
                         <artifactItems>
                             <artifactItem>
                                 <groupId>com.github.jsimone</groupId>
@@ -39,9 +29,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
                             </artifactItem>
                         </artifactItems>
                     </configuration>
-                </execution>
-            </executions>
-        </plugin>
-		</plugins>
-		</build>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
