--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
     <version>1.0-SNAPSHOT</version>
-    <artifactId>helloworld</artifactId>
+    <artifactId>sheralinemsgdemo</artifactId>
     <dependencies>
     </dependencies>
     <build>
+	<finalName>sheralinemsgdemo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
